fix markdown code block being overflow

--- a/src/styles/components/MarkdownViewer.module.scss
+++ b/src/styles/components/MarkdownViewer.module.scss
@@ -23,4 +23,8 @@
     a {
         text-decoration: underline;
     }
+
+    code {
+        white-space: pre-wrap !important;
+    }
 }
