--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,6 +31,8 @@
     --secondary900: #3d3d3d;
     --secondary950: #252525;
 
+    --input-background: #ffffff;
+
     --background-start: #fffff0;
     --background-end: #f0f0f0;
 
@@ -66,7 +68,7 @@ main {
     .content {
         position: relative;
         width: 100%;
-        padding: 1rem;
+        padding: .5rem;
         font-size: 1.1rem;
         line-height: var(--line-height);
     }
